--- a/project/Project.form
+++ b/project/Project.form
@@ -2,9 +2,12 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="project.Project">
   <grid id="27dc6" binding="window" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="88" y="43" width="702" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <maximumSize width="500" height="500"/>
+      <minimumSize width="300" height="300"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="a9b8a" class="javax.swing.JLabel" binding="text">
@@ -13,9 +16,10 @@
           <gridbag weightx="1.0" weighty="1.0"/>
         </constraints>
         <properties>
-          <horizontalAlignment value="2"/>
-          <horizontalTextPosition value="2"/>
-          <text value=""/>
+          <font name="Times New Roman" size="22" style="1"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="0"/>
+          <text value="&lt;html&gt;You are in a forest with no way out,&lt;br&gt;&#10;You only hava a dagger&lt;br&gt;&#10;and no armour&lt;br&gt;&#10;the forest is a deadly place&lt;br&gt;&#10;full of creatures waiting to strike&lt;br&gt;&#10;to live you must find a way out&lt;br&gt;&lt;/html"/>
         </properties>
       </component>
       <component id="c9d4e" class="javax.swing.JTextField" binding="input">
@@ -33,9 +37,10 @@
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
+          <font name="Times New Roman"/>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="0"/>
-          <text value="Button"/>
+          <text value="Input"/>
         </properties>
       </component>
     </children>
